--- a/AI-102.md
+++ b/AI-102.md
@@ -570,3 +570,515 @@ What does the size parameter indicate?
 </details>
 
 ---
+Q: You are an AI engineer tasked with creating a Cognitive Services resource programmatically in the East US Azure region. The resource will be used to analyze text for sentiment analysis. Which code should you use?
+<details><summary>Show the answer</summary><p>
+
+- **create_resource(client, "textAnalysis", "TextAnalytics", "F0", "eastus")**
+> The TextAnalytics kind with the F0 account tier and eastus location is suitable for sentiment analysis, and it ensures that the resource is free.
+</details>
+
+----
+Q: You are an AI engineer at a food production factory. You need a solution to monitor staff compliance with PPE requirements, specifically identifying those without masks or safety glasses, every 15 minutes. The solution must minimize development effort and costs. Which service should you use?
+<details><summary>Show the answer</summary><p>
+
+- **Azure AI Face service**
+> The Azure AI Face service can detect the presence of masks and safety glasses, making it an ideal choice for monitoring PPE compliance with minimal development effort and cost
+</details>
+
+----
+Q: You are an AI engineer at a company with an Azure bot named botX, which uses a Language Understanding resource named luX. You need to ensure that botX adheres to the Microsoft responsible AI principle of inclusiveness. What should you add to botX?
+<details><summary>Show the answer</summary><p>
+
+- **Add Direct Line Speech to botX**
+> Adding Direct Line Speech to botX enables voice interaction, making the bot more accessible to users with different needs, such as those with visual impairments, thereby promoting inclusiveness
+</details>
+
+----
+Q: An AI engineer is developing a customer service chatbot that will process text and video interactions from a company's website. The engineer plans to notify users whenever their data has been processed by the chatbot. Which responsible AI principle does this help meet?
+<details><summary>Show the answer</summary><p>
+
+- **Transparency**
+> Notifying users that their data has been processed aligns with the principle of transparency, which involves being open about how data is used and processed
+</details>
+
+----
+Q: You are an AI engineer at a social media company responsible for ensuring that user-generated content adheres to community guidelines. You need to implement a solution that automatically moderates images and text content for offensive or harmful material. Which service should you include in your solution?
+<details><summary>Show the answer</summary><p>
+
+- **Azure AI Content Safety**
+> Azure AI Content Safety is designed specifically to detect and moderate offensive or harmful content in both images and text, making it ideal for ensuring content adheres to community guidelines
+</details>
+
+----
+Q: You are building an app that will use the Azure AI Speech service. You need to ensure that the app can authenticate to the service using a Microsoft Entra ID token. Which two actions should you perform?
+<details><summary>Show the answer</summary><p>
+
+- **Configure a custom subdomain**
+> Configuring a custom subdomain allows you to secure the Speech service endpoint with a domain that is controlled and trusted
+- **Create a private endpoint**
+> Creating a private endpoint ensures that access to the Speech service is restricted to resources within the virtual network, enhancing security
+</details>
+
+----
+Q: You are a data scientist managing an Azure AI Search (formerly Azure Cognitive Search) service . Over the past year, the volume of queries has increased steadily, and some search queries are now being throttled. How can you reduce the likelihood of query throttling?
+<details><summary>Show the answer</summary><p>
+
+- **Migrate the service to a higher tier**
+> Migrating to a higher tier can provide more resources and better performance, reducing the likelihood of query throttling
+</details>
+
+----
+Q: You are an AI engineer tasked with indexing a collection of historical documents stored as PDF files. The solution must allow for full-text search on the contents of these documents. You need to create an indexer with a skillset.
+Which skill should you include?
+<details><summary>Show the answer</summary><p>
+
+- **document extraction**
+> Document extraction is used to extract text from documents, making it possible to index and search the contents
+</details>
+
+----
+Q: A developer at Northwind Traders needs to deploy a language model for their chatbot application. Which Azure AI service should they use to select and deploy this model?
+<details><summary>Show the answer</summary><p>
+
+- **Azure OpenAI Service**
+> Azure OpenAI Service is designed for selecting and deploying advanced language models, making it suitable for applications like chatbots
+</details>
+
+----
+Q: You are an AI engineer developing a solution that uses Sentiment Analysis results from customer surveys to calculate bonuses for customer service staff. To align with Microsoft responsible AI principles, what should you do?
+<details><summary>Show the answer</summary><p>
+
+- **Add a human review and approval step before making decisions that affect staff's financial situation**
+> Adding a human review and approval step ensures that decisions affecting financial outcomes are fair and can address potential biases or errors in the AI system, adhering to responsible AI principles
+</details>
+
+----
+Q: A financial analyst at a logistics company needs to automate the extraction of key information such as invoice number, date, and total amount from invoices in multiple languages. The solution should be quick to implement and require minimal development effort. Which Azure service should be used?
+<details><summary>Show the answer</summary><p>
+
+- **Form Recognizer (Azure AI Document Intelligence)**
+> This service is designed to extract structured data from documents such as invoices, receipts, and forms with minimal configuration and development effort
+</details>
+
+----
+Q: You have a Custom Vision resource named acvdev in a development environment. You have a Custom Vision resource named acvprod in a production environment. In acvdev, you build an object detection model named obj1 in a project named proj1. You need to move obj1 to acvprod.
+Which three actions should you perform in sequence?
+
+Actions:
+- Use the ExportProject endpoint on acvdev.
+- Use the GetProjects endpoint on acvdev.
+- Use the ImportProject endpoint on acvprod.
+- Use the ExportIteration endpoint on acvdev.
+- Use the GetIterations endpoint on acvdev.
+- Use the UpdateProject endpoint on acvprod.
+<details><summary>Show the answer</summary><p>
+
+- **Use the GetProjects endpoint on acvdev**
+- **Use the ExportProject endpoint on acvdev**
+- **Use the ImportProject endpoint on acvprod**
+</details>
+
+----
+Q: You are an AI engineer developing an app that manages feedback. You need to ensure that the app can detect negative comments using the Sentiment Analysis API in Azure AI Language while ensuring that the managed feedback remains on your company’s internal network. Which three actions should you perform in sequence?
+<details><summary>Show the answer</summary><p>
+
+- **Provision the Language service resource in Azure**
+- **Deploy a Docker container to an on-premises server**
+- **Run the container and query the prediction endpoint**
+</details>
+
+----
+Q: You are a data engineer with an Azure AI Search instance that indexes invoices using Azure AI Document Intelligence. To analyze the extracted information in Microsoft Power BI, you need a solution that minimizes development effort. What should you add to the indexer?
+<details><summary>Show the answer</summary><p>
+
+- **A table projection**
+> Adding a table projection to the indexer allows you to structure the extracted data in a tabular format, which can be directly imported into Power BI for analysis, minimizing the development effort
+</details>
+
+----
+Q: You have an Azure OpenAI resource named AI1 that hosts three deployments of the GPT-3.5 model. Each deployment is optimized for a unique workload. You plan to deploy three apps. Each app will access AI1 by using the REST API and will use the deployment that was optimized for the app's intended workload. You need to provide each app with access to AI1 and the appropriate deployment. The solution must ensure that only the apps can access AI1. What should you use to provide access to AI1, and what should each app use to connect to its appropriate deployment?
+<details><summary>Show the answer</summary><p>
+
+- **Provide access to AI1 by using: An API key**
+- **Connect to the deployment by using: A deployment endpoint**
+> An API key: This provides secure access to the Azure OpenAI resource, ensuring that only the authorized apps can access AI1.
+A deployment endpoint: Each app needs to connect to its specific deployment optimized for its workload. Using the deployment endpoint ensures the app interacts with the correct deployment
+</details>
+
+----
+Q: An AI engineer is building a language understanding model to search for contact information using an intent named FindContact. A list of phrases provided for training includes:
+- Find contacts in New York.
+- Who do I know in Berlin?
+- Search for contacts in Tokyo.
+The engineer needs to implement this phrase list in Language Understanding.
+What should be done?
+<details><summary>Show the answer</summary><p>
+
+- **Create a new utterance for each phrase in the FindContact intent**
+> Create a new utterance for each phrase in the FindContact intent. This ensures that the model is trained to recognize and understand each specific phrase, improving its ability to handle similar queries effectively
+</details>
+
+----
+Q: A data scientist is training a Language Understanding model for a customer support chatbot. They have created an intent named RetrieveOrderDetails and added 300 examples. To ensure the model accurately identifies relevant queries and reduces false positives, what should the data scientist do?
+<details><summary>Show the answer</summary><p>
+
+- **Add examples to the None intent**
+> Add examples to the None intent. Including examples in the None intent helps the model distinguish between queries that do not fit any of the defined intents, thereby reducing false positives by providing a clearer distinction between relevant and irrelevant queries
+</details>
+
+----
+Q: You are developing an internet-based training solution for remote learners. Your company wants to verify whether learners are present during the training sessions. Which Azure Cognitive Services should you use to analyze video feeds to detect learner presence?
+<details><summary>Show the answer</summary><p>
+
+- **Face API**
+> The Face API is specifically designed to detect and recognize faces in video feeds, making it ideal for verifying the presence of learners
+</details>
+
+----
+Q: You want to detect whether learners are talking during remote training sessions by analyzing audio feeds. Which Azure Cognitive Services should you use for this task?
+<details><summary>Show the answer</summary><p>
+
+- **Speech to Text**
+> The Speech to Text service can transcribe spoken words from audio feeds, making it ideal for detecting if learners are talking
+</details>
+
+----
+Q: An AI engineer is developing a method for an application that uses the Translator API. The method will translate webpage content into Greek (el) and include a transliteration using the Roman alphabet.
+Which three query parameters should the engineer include in the URI for the Translator API call?
+<details><summary>Show the answer</summary><p>
+
+- **to=el**
+> to=el specifies the target language as Greek
+- **textType=html**
+> textType=html ensures the content is treated as HTML for accurate translation of web content
+- **toScript=Latn**
+> toScript=Latn specifies the transliteration of the translated content into the Roman alphabet
+</details>
+
+----
+Q: A data engineer is developing a tool using Azure AI Language. They need to upload a custom vocabulary file to improve the recognition of industry-specific terms.
+Which file format should the data engineer use for uploading the custom vocabulary?
+<details><summary>Show the answer</summary><p>
+
+- **TXT**
+> Azure AI Language supports TXT files for uploading custom vocabulary, making it the suitable format for this task
+</details>
+
+----
+Q: You are developing an app that uses the Azure AI Vision API to analyze images. You need to ensure the app provides descriptions in complete sentences for users who are vision impaired. Which API call should you use?
+<details><summary>Show the answer</summary><p>
+
+- **describeImageInStreamAsync**
+> The describeImageInStreamAsync API call generates detailed descriptions of images in complete sentences, making it suitable for providing outputs that are accessible to vision-impaired users
+</details>
+
+----
+Q: You are an AI engineer with an Azure AI Search solution and a collection of product descriptions that include a category field. You need to index the descriptions to:
+- Include the category field in the search results.
+- Ensure users can search for terms in the category field.
+- Allow users to filter results based on category.
+Which index attributes should you configure for the category field?
+<details><summary>Show the answer</summary><p>
+
+- **searchable, facetable, and retrievable**
+> Configuring the category field as searchable, facetable, and retrievable ensures it can be included in search results, searched for specific terms, and used for drill-down filtering
+</details>
+
+----
+Q: You have an Azure OpenAI model named AI1. You are building a web app named App1 using the Azure OpenAI SDK. You need to configure App1 to connect to AI1. What information must you provide?
+<details><summary>Show the answer</summary><p>
+
+- **The deployment name, endpoint, and key**
+> To connect App1 to the Azure OpenAI model AI1, you need to provide the deployment name to specify which deployment to use, the endpoint to connect to the Azure OpenAI resource, and the key for authentication
+</details>
+
+----
+Q: You are an AI engineer developing a language model using the Language Understanding (classic) service. After creating a new Language Understanding resource, you need to add more contributors. How can you achieve this?
+<details><summary>Show the answer</summary><p>
+
+- **Use the Access control (IAM) page for the authoring resources in the Azure portal**
+> To add contributors to your Language Understanding (LUIS) resource, you should use the Access control (IAM) page for the authoring resources. This allows you to assign the necessary roles to users for managing and collaborating on the LUIS models
+</details>
+
+----
+Q: A developer is tasked with implementing a text moderation solution for an online community platform using Azure AI Content Safety. The platform needs to automatically detect and moderate offensive language in user-submitted comments.
+What should the developer do to implement this solution?
+<details><summary>Show the answer</summary><p>
+
+- **Use the Text Moderation API to analyze user comments for offensive content**
+> Use the Text Moderation API to analyze user comments for offensive content. This API is specifically designed to detect and moderate offensive language in text, making it the appropriate tool for this task
+</details>
+
+----
+Q: You are developing a containerized version of a sentiment analysis API for local testing and on-premises deployment. The API should meet the following requirements:
+- Prevent sensitive information from being stored in command-line histories.
+- Control access using Azure role-based access control (Azure RBAC).
+Which steps should you include in the development process?
+<details><summary>Show the answer</summary><p>
+
+- **Push the image to an Azure container registry**
+> Push the image to an Azure container registry (ACR). Using Azure container registry with role-based access control helps in managing and securing your container images
+- **Build the image**
+> Build the image. Building the image from the Dockerfile is a crucial step to create the customized container for deployment
+- **Create a custom Dockerfile**
+> Create a custom Dockerfile. Creating a custom Dockerfile allows you to configure the container environment, ensuring that sensitive information is not stored in command-line histories
+- **Pull the sentiment analysis API container image**
+> Pull the sentiment analysis API container image (in the Dockerfile). Including the base image pull in the Dockerfile is necessary to customize and build upon it for your specific use case
+</details>
+
+----
+Q: You are an AI engineer working on a Custom Vision project for object detection. The project uses the General domain and contains a trained model. You need to export the model for use on a network that is disconnected from the internet. What actions should you perform?
+<details><summary>Show the answer</summary><p>
+
+- **Export the model**
+> After retraining the model in the compact domain, you need to export it so that it can be used on a network that is disconnected from the internet. Exporting the model generates a file that can be deployed offline
+- **Change Domains to General (compact)**
+> Changing the domain to General (compact) is necessary because compact models are optimized for export and offline use. The General (compact) domain ensures the model can run efficiently in a constrained environment without internet access
+- **Retrain the model**
+> Once the domain is changed to General (compact), retraining the model is essential to ensure it is properly adjusted to the new domain’s parameters. This step is crucial for maintaining the model's accuracy and performance in its new configuration
+</details>
+
+----
+Q: A developer is building an application that allows users to upload images. The application needs to meet the following requirements:
+- Extract text from uploaded images.
+- Detect offensive language in the extracted text.
+- Minimize development effort.
+Which Azure AI services should the developer use to meet these requirements?
+<details><summary>Show the answer</summary><p>
+
+- **Text extraction: Azure AI Vision**
+- **Profane language detection: Azure AI Content Safety**
+> Azure AI Vision is ideal for extracting text from images, making it suitable for the text extraction requirement.
+Azure AI Content Safety provides capabilities to detect and moderate offensive content, including profane language, thus addressing the need for profane language detection
+</details>
+
+----
+Q: You are an AI engineer tasked with provisioning a QnA Maker service for a client. You create an App Service plan named AP2 in a new resource group named RG2. When you provision the QnA Maker service in RG2, which two Azure resources are automatically created in RG2 as part of the solution?
+<details><summary>Show the answer</summary><p>
+
+- **Azure App Service**
+> Azure App Service is also created to host the QnA Maker runtime
+- **Azure Cognitive Search**
+> When you provision a QnA Maker service, Azure Cognitive Search is created to index and search the knowledge base
+</details>
+
+----
+Q: You are tasked with setting up an enrichment pipeline for a collection of 75,000 scanned documents that contain text. The pipeline needs to perform both Optical Character Recognition (OCR) and text analytics using Azure AI Search. To ensure the solution is cost-effective, which resource should you link to the skillset to minimize expenses?
+<details><summary>Show the answer</summary><p>
+
+- **A new Cognitive Services resource using the F0 (free) pricing tier**
+> Using a Cognitive Services resource with the F0 (free) pricing tier is the most cost-effective solution to perform OCR and text analytics on a large number of documents. The F0 tier provides limited free transactions which can help minimize costs while still meeting your requirements
+</details>
+
+----
+Q: You are developing an online training solution that requires users' cameras and microphones to stay active. You need to monitor the video stream to detect when a user asks a question to the instructor. The solution should minimize development effort. What should you include in your solution?
+<details><summary>Show the answer</summary><p>
+
+- **Speech-to-text in the Azure AI Speech service**
+> Speech-to-text in the Azure AI Speech service converts spoken words into text, making it easier to detect when a user asks a question. This minimizes development effort as it directly addresses the requirement to monitor and transcribe user speech
+</details>
+
+----
+Q: You train a Custom Vision model to identify various plant species using the Environment domain. You plan to deploy the model as part of an app for iOS devices. You need to prepare the model for deployment.
+What three actions should you perform?
+<details><summary>Show the answer</summary><p>
+
+- **Change the model domain**
+> Changing the model domain is necessary to ensure the model is trained for the specific application requirements
+- **Export the model**
+> Exporting the model makes it available for deployment in the intended app, ready for use
+- **Retrain the model**
+> Retraining the model adapts it to the new domain, improving its accuracy and relevance
+</details>
+
+----
+Q: A data analyst at Contoso Ltd. is tasked with implementing an image moderation solution to filter inappropriate content in user-uploaded images on their social platform. Which Azure AI service should they use to achieve this goal?
+<details><summary>Show the answer</summary><p>
+
+- **Azure AI Content Safety**
+> Azure AI Content Safety is specifically designed to implement solutions for moderating content, including images, to ensure safety and appropriateness
+</details>
+
+----
+Q: You plan to deploy an Azure OpenAI resource using an Azure Resource Manager (ARM) template. You need to ensure that the resource can handle 600 requests per minute. How should you complete the template?
+<details><summary>Show the answer</summary><p>
+
+```
+{
+  "type": "Microsoft.CognitiveServices/accounts/deployments",
+  "apiVersion": "2023-05-01",
+  "name": "arm-aoai-sample-resource/arm-je-std-deployment",
+  "dependsOn": [
+    "[resourceId('Microsoft.CognitiveServices/accounts', 'arm-aoai-sample-resource')]"
+  ],
+  "sku": {
+    "name": "Standard",
+    "capacity": 100
+  },
+  "properties": {
+    "model": {
+      "format": "OpenAI",
+      ...
+    }
+  }
+}
+```
+> Using "capacity" in the sku section of the ARM template with a value of 100 ensures the resource is configured to handle the required 600 requests per minute. The "capacity" parameter is designed to set the performance level required for the deployment
+</details>
+
+----
+Q: You are an AI engineer tasked with developing an automated support system that responds to users in their native language. The system will support both Spanish and German. Which Azure AI services should you use to meet each requirement?
+Requirements:
+- Detect the language of incoming requests.
+- Respond in the user's own language
+<details><summary>Show the answer</summary><p>
+
+- **Speech to Text**
+> Speech to Text can be used to convert spoken language into text, which helps in detecting the language of incoming voice requests
+- **Text to Speech**
+> Text to Speech can be used to convert text responses into spoken language, allowing the system to respond in the user's own language
+</details>
+
+----
+Q: A data scientist at a healthcare organization is developing an AI system to process patient data from various regions. The system needs to ensure that it provides equitable results for all patients, regardless of their demographics. Which two responsible AI principles should guide the monitoring of this system?
+<details><summary>Show the answer</summary><p>
+
+- **Fairness**
+> This principle ensures that the AI system provides equitable results regardless of a user’s location or background. It involves minimizing bias in the AI system’s outcomes and providing equal opportunities for all users
+- **Inclusiveness**
+> This principle ensures that the AI system is accessible and usable by the widest possible range of people, regardless of their location or background. It involves considering the diverse characteristics of potential users during the design and deployment of the AI system
+</details>
+
+----
+Q: You are a data engineer tasked with indexing a 30-GB video file stored in an AWS S3 bucket. The video file is named TrainingSession.mp4. You need to index TrainingSession.mp4 using the Azure AI Video Indexer website. What should you do?
+<details><summary>Show the answer</summary><p>
+
+- **From S3, create a pre-signed URL for TrainingSession.mp4, and then copy the URL to the Azure AI Video Indexer website**
+> Creating a pre-signed URL provides secure, temporary access to the video file, allowing Azure AI Video Indexer to index it without needing to download and upload the large file
+</details>
+
+----
+Q: An AI engineer at AdventureWorks needs to generate custom images for a marketing campaign. Which Azure AI service should they use to accomplish this?
+<details><summary>Show the answer</summary><p>
+
+- **Azure OpenAI DALL-E**
+> Azure OpenAI DALL-E is a model specifically designed to generate images from textual descriptions, making it ideal for creating custom images for various purposes
+</details>
+
+----
+Q: A data scientist at a manufacturing company is developing a predictive maintenance system. The system collects IoT sensor data from 50 industrial machines, each generating data every minute. To identify unusual values and predict machine failures, which Azure service should the data scientist use?
+<details><summary>Show the answer</summary><p>
+
+- **Anomaly Detector**
+> The Anomaly Detector service is specifically designed to identify unusual patterns and anomalies in time series data, making it ideal for predictive maintenance
+</details>
+
+----
+Q: You successfully run the following HTTP request:
+```
+POST https://management.azure.com/subscriptions/18c51a87-3a69-47a8-aedc-a54745f708a1/resourceGroups/RG1/providers/Microsoft.CognitiveServices/accounts/contoso1/regenerateKey?api-version=2017-04-18 Body{"keyName": "Key2"}
+```
+What is the result of this request?
+<details><summary>Show the answer</summary><p>
+
+- **The secondary subscription key was reset**
+> The request specifically regenerates the key named "Key2", which corresponds to the secondary subscription key, resetting it
+</details>
+
+----
+Q: An AI engineer is enhancing a language understanding model for a customer service chatbot and needs to enable active learning to improve model performance over time.
+How should the engineer enable active learning?
+<details><summary>Show the answer</summary><p>
+
+- **Add log=true to the prediction endpoint query**
+> This action enables logging, which is essential for active learning as it allows the model to gather data from user interactions and improve iteratively
+</details>
+
+----
+Q: An AI engineer is developing a language understanding model for an e-commerce platform. The model needs to capture billing addresses from user input.
+Which entity type should the engineer use for the billing address?
+<details><summary>Show the answer</summary><p>
+
+- **Machine learned**
+> Machine learned entities are suitable for capturing complex and unstructured data like billing addresses, as they can adapt to various formats and nuances in user input
+</details>
+
+----
+Q: A developer is preparing to upload speech samples to Azure Speech Studio for a project. The samples must be correctly formatted to ensure successful processing.
+What is the best way to upload the speech samples?
+<details><summary>Show the answer</summary><p>
+
+- **Upload a zip file containing audio files in the .wav format and a corresponding text transcript file**
+> Uploading a zip file containing .wav audio files and a corresponding text transcript file ensures that Speech Studio can process both audio and text data together effectively
+</details>
+
+----
+Q: You are an AI engineer with an Azure IoT hub receiving sensor data from factory equipment. You need to build an app that:
+- Detects anomalies across multiple correlated sensors.
+- Identifies the root cause of equipment stops.
+- Sends incident alerts.
+- The solution must minimize development time.
+Which Azure service should you use?
+<details><summary>Show the answer</summary><p>
+
+- **Azure Metrics Advisor**
+> Azure Metrics Advisor is designed for anomaly detection and diagnostics, especially for time-series data from IoT devices. It can quickly identify anomalies, diagnose issues, and send alerts with minimal development effort
+</details>
+
+----
+Q: A data engineer at a financial services company plans to enable server-side encryption for their Azure Cognitive Search service and use customer-managed keys (CMK) stored in Azure Key Vault. What are three implications of this planned change?
+<details><summary>Show the answer</summary><p>
+
+- **Query times will increase**
+> Using server-side encryption with customer-managed keys can introduce additional latency due to the encryption and decryption processes
+- **An Azure Key Vault is required**
+> Azure Key Vault is necessary to manage and store the customer-managed keys used for encryption
+- **Index size will increase**
+> Encryption can increase the overall size of the index because of the overhead associated with storing encrypted data
+</details>
+
+----
+Q: An AI engineer is building a Conversational Language Understanding model for a customer service chatbot for a financial services company. Users can speak or type their account numbers when prompted by the chatbot. The engineer needs to construct an entity to capture these account numbers accurately.
+Which entity type should the engineer use?
+<details><summary>Show the answer</summary><p>
+
+- **Regex**
+> Regex entities are used to identify patterns in text, making it suitable for capturing structured data like account numbers which follow a specific format
+</details>
+
+----
+Q: You are developing an application that will recognize faults in components produced on a factory production line. The components are specific to your business. You need to use the Custom Vision API to help detect common faults.
+Which three actions should you perform?
+<details><summary>Show the answer</summary><p>
+
+- **Upload and tag images**
+> Uploading and tagging images provides the necessary data for training the model, helping it learn to detect faults
+- **Create a project**
+> Creating a project is the first step where you define the scope and purpose of your model
+- **Train the classifier model**
+> Training the classifier model uses the tagged images to develop the capability to identify faults in new images
+</details>
+
+----
+Q: You are a data scientist using Azure Video Analyzer for Media to make company training videos searchable by identifying the people present. How should you configure the system?
+<details><summary>Show the answer</summary><p>
+
+- **Create person objects and upload face images for each individual**
+> By creating person objects and uploading face images, Azure Video Analyzer can automatically recognize and tag individuals in the videos, enabling efficient search functionality
+</details>
+
+----
+Q: A data engineer at a retail company is tasked with building a multilingual intelligent customer support chatbot. The chatbot must:
+- Handle general chit-chat.
+- Access and retrieve information from a knowledge base.
+- Understand and process messages in multiple languages.
+- Analyze the sentiment of user messages.
+- Automatically use the appropriate language model for each interaction.
+Which combination of Azure services should the data engineer integrate to fulfill these requirements?
+<details><summary>Show the answer</summary><p>
+
+- **Language Understanding (LUIS), Text Analytics, and Azure AI Language (Custom Question Answering)**
+> Language Understanding (LUIS) handles chit-chat and intent recognition, ensuring that the chatbot can understand and respond to user inputs naturally. Text Analytics provides sentiment analysis and language detection, enabling the chatbot to process emotions and identify the language of messages. Azure AI Language (Custom Question Answering) (a replacement for QnA Maker) provides access to a multi-language knowledge base, making it suitable for multilingual scenarios. Together, these services fulfill all the requirements for the chatbot
+</details>
+
+----
