--- a/AI-900.md
+++ b/AI-900.md
@@ -740,3 +740,436 @@ Q: As per the NIST AI Risk Management Framework, what is the first stage to cons
 </details>
 
 ----
+Q: What capability allows a computer to automatically detect errors or unusual activity in a system?
+<details><summary>Show the answer</summary><p>
+
+- **Anomaly Detection**
+> The capability to automatically detect errors or unusual activity in a system. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/1-introduction?ns-enrollment-type=LearningPath&ns-enrollment-id=learn.wwl.get-started-with-artificial-intelligence-on-azure)
+</details>
+
+----
+Q: In which of the following two scenarios is speech recognition technology appropriately used?
+<details><summary>Show the answer</summary><p>
+
+- **Providing closed captions for recorded or live videos**
+> Providing closed captions for recorded or live videos: Speech recognition is ideal for converting spoken words in videos into text for closed captions.
+- **Creating a transcript of a telephone call or meeting**
+> Creating a transcript of a telephone call or meeting: This involves transcribing spoken dialogue into written form, a key application of speech recognition technology.
+</details>
+
+----
+Q: A company needs to make an official statement delivered to the news media which must be available in a range of languages.
+What service is best suited for this task?
+<details><summary>Show the answer</summary><p>
+
+- **Translator Text**
+> Translator is a cloud-based machine translation service you can use to translate text in near real-time through a simple REST API call. The service uses modern neural machine translation technology and offers statical machine translational technology. Custom Translator is an extension of Translator, which allows you to build natural translation systems. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/translator/translator-info-overview)
+</details>
+
+----
+Q: What are the three essential types of data required for training a language understanding model?
+<details><summary>Show the answer</summary><p>
+
+- **Utterance**
+> An utterance is an example of something a user might say, and which your application must interpret. For example, when using a home automation system, a user might use the following utterances: "Switch the fan on". [Source](https://docs.microsoft.com/en-us/learn/modules/create-language-model-with-language-understanding/1-introduction)
+- **Intents**
+> An intent represents the purpose, or goal, expressed in a user's utterance. For example, for both of the previously considered utterances, the intent is to turn a device on; so in your Language Understanding application, you might define a TurnOn intent that is related to these utterances.
+- **Entities**
+> An entity is a word or phrase that is the focus of the utterance, as the world "light" in the utterance " Turn the lights on".
+</details>
+
+----
+Q: A company decides to use a chatbot to assist customers on their website.
+What type of AI workload should be utilized to recognize when a consumer is upset based on the chatbot's responses?
+<details><summary>Show the answer</summary><p>
+
+- **Natural language processing**
+> Natural language processing (NLP) is used for tasks such as sentiment analysis, topic detection, language detection, key phrase extraction, and document categorization. Sentiment analysis is the process of determining whether a piece of writing is positive, negative, or neutral. [Source](https://docs.microsoft.com/en-us/azure/architecture/data-guide/technology-choices/natural-language-processing)
+</details>
+
+----
+Q: Which architecture do today's cutting-edge large language models for NLP tasks primarily use?
+<details><summary>Show the answer</summary><p>
+
+- **Transformer**
+> Contemporary large language models (LLMs) for NLP are based on the transformer architecture, which is specifically designed to handle sequences of text data and has been very successful in generating language.
+</details>
+
+----
+Q: Which of the following features is characteristic of generative AI solutions?
+<details><summary>Show the answer</summary><p>
+
+- **Generating new content based on learned patterns**
+> Generative AI is known for creating new, original content (like text or images) by understanding and applying patterns it has learned from data.
+</details>
+
+----
+Q: A student develops a machine learning model to predict whether a student will complete a college course. What type of machine learning technique is applied?
+<details><summary>Show the answer</summary><p>
+
+- **Classification**
+> Two-class classification provides the answer to simple two-choice questions such as Yes/No or True/False.
+The Classification technique is used to classify and can be used to determine risk and non-risk customers for a banking sector, detect spam or non-spam emails, identifying whether the prospective customer will buy a bike or not, classify plants and animals. [Source](https://www.sqlshack.com/prediction-with-classification-in-azure-machine-learning/)
+</details>
+
+----
+Q: Which of the following best describes how to ensure fairness in an AI solution?
+<details><summary>Show the answer</summary><p>
+
+- **By regularly monitoring, auditing, and evaluating AI solutions for fairness**
+> Regularly monitoring, auditing, and evaluating AI solutions are essential steps for ensuring fairness in an AI solution.
+</details>
+
+----
+Q: Identifying handwritten letters is an example of what kind of AI workload?
+<details><summary>Show the answer</summary><p>
+
+- **Computer Vision**
+> The capability of software to interpret the world visually through cameras, video, and images. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/1-introduction?ns-enrollment-type=LearningPath&ns-enrollment-id=learn.wwl.get-started-with-artificial-intelligence-on-azure)
+</details>
+
+----
+Q: Which service should be used to extract text, key/value pairs, and table data automatically from scanned documents?
+<details><summary>Show the answer</summary><p>
+
+- **Form Recognizer**
+> Form Recognizer applies advanced machine learning to accurately extract text, key/ value pairs, and tables from documents. With just a few samples, Form Recognizer tailors its understanding to your documents, both on-premises and in the cloud. Turn forms into usable data at a fraction of the time and cost, so you can focus more time acting on the information rather than compiling it. [Source](https://azure.microsoft.com/en-us/services/cognitive-services/form-recognizer/)
+</details>
+
+----
+Q: A web chatbot is being developed by a company to deliver automatic responses to frequent client questions for the customer service department.
+Which business benefits can the company expect as a result of the web chatbot solution's development?
+<details><summary>Show the answer</summary><p>
+
+- **a reduced workload for the customer service agents**
+> The web chatbot would provide less workload for the customer service agents due to its function of answering the telephone and email support to customers. [Source](https://docs.microsoft.com/en-us/azure/bot-service/bot-builder-webchat-overview?view=azure-bot-service-4.0)
+</details>
+
+----
+Q: You are designing an AI system that empowers everyone, including people who have hearing, visual, and other impairments. This is an example of which Microsoft guiding principle for responsible AI?
+<details><summary>Show the answer</summary><p>
+
+- **Inclusiveness**
+> Inclusiveness mandates that AI should consider all human races and experiences. Inclusive design practices can help developers understand and address potential barriers that could unintentionally exclude people. Where possible, organizations should use speech-to-text, text-to-speech, and visual recognition technology to empower people who have hearing, visual, and other impairments.
+</details>
+
+----
+Q: What type of machine learning type is the process of choosing gender, length of the song, and genre to train a music recommendation model?
+<details><summary>Show the answer</summary><p>
+
+- **Feature selection**
+> In machine learning and statistics, feature selection is the process of selecting a subset of relevant, useful features to use in building an analytical model. Feature selection helps narrow the field of data to the most valuable inputs. Narrowing the field of data helps reduce noise and improve training performance. [Source](https://docs.microsoft.com/en-us/azure/machine-learning/classic/evaluate-model-performance)
+</details>
+
+----
+Q: Which of the following scenarios fits the correct type of AI workload?
+<details><summary>Show the answer</summary><p>
+
+- **An automated chat that answers questions regarding refunds and exchange is an example of Conversational AI**
+> Conversational AI - The capability of a software "agent" to participate in a conversation. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/1-introduction?ns-enrollment-type=LearningPath&ns-enrollment-id=learn.wwl.get-started-with-artificial-intelligence-on-azure
+- **Determining whether a photo contains a person is an example of Computer Vision**
+> The capability of software to interpret the world visually through cameras, video, and images. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/1-introduction?ns-enrollment-type=LearningPath&ns-enrollment-id=learn.wwl.get-started-with-artificial-intelligence-on-azure)
+- **Determining whether a review is positive or negative is an example of Natural language processing**
+> Sentiment analysis, subject recognition, language detection, key phrase extraction, and document categorization are among activities that natural language processing (NLP) is employed for. [Source](https://docs.microsoft.com/en-us/azure/architecture/data-guide/technology-choices/natural-language-processing)
+</details>
+
+----
+Q: Providing consumers with information and control over how their data is collected, used, and stored is an example of what type of principles for responsible AI?
+<details><summary>Show the answer</summary><p>
+
+- **Privacy and security**
+> Privacy and data security issues require especially close attention because access to data is essential for AI systems to make accurate and informed predictions and decisions about people. AI systems must comply with privacy laws that require transparency about the collection, use, and storage of data and mandate that consumers have appropriate controls to choose how their data is used. [Source](https://docs.microsoft.com/en-us/learn/modules/responsible-ai-principles/4-guiding-principles)
+</details>
+
+----
+Q: Which of the following are Microsoft AI principles that guide the use of Azure OpenAI?
+<details><summary>Show the answer</summary><p>
+
+- **Accountability**
+- **Transparency**
+> Accountability and transparency are two of the six Microsoft AI principles, emphasizing the importance of being responsible for AI operations and providing clear explanations of AI systems
+</details>
+
+----
+Q: What are two tasks that can be performed by using computer vision?
+<details><summary>Show the answer</summary><p>
+
+- **Identify specific brands in an image**
+> From a database of millions of global logos, identify commercial companies in photos or videos. This function can be used to find out which brands are most popular on social media or in media product placement, for example. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/computer-vision/overview)
+- **Recognize the color scheme in an image**
+> Examine how colour is used in an image. Computer Vision can tell if a picture is black and white or colour, as well as to detect the dominant and accent colours in colour images.
+</details>
+
+----
+Q: What are the six principles guiding Microsoft Responsible AI Development and Use?
+<details><summary>Show the answer</summary><p>
+
+- **Fairness**
+- **Reliability and safety**
+- **Privacy and security**
+- **Inclusiveness**
+- **Transparency**
+- **Accountability**
+> Microsoft recognizes six principles that they believe should guide AI development and use: fairness, reliability and safety, privacy and security, inclusiveness, transparency, and accountability. These principles are the cornerstone of a responsible and trustworthy approach to AI, especially as intelligent technology becomes more prevalent in the products and services we use every day. [Source](https://docs.microsoft.com/en-us/learn/modules/responsible-ai-principles/4-guiding-principles)
+</details>
+
+----
+Q: A data scientist has been tasked with forecasting the sea level in meters for the next five years. What kind of machine learning algorithm should be used?
+<details><summary>Show the answer</summary><p>
+
+- **Regression**
+> Regression refers to the prediction of a numeric target. Linear regression attempts to establish a linear relationship between one or more independent variables and a numeric outcome, or dependent variable. [Source](https://docs.microsoft.com/en-us/azure/machine-learning/algorithm-module-reference/linear-regression)
+</details>
+
+----
+Q: A corporation ensures that AI systems function as intended, respond to unexpected circumstances, and resist harmful manipulation. Which principle of responsible AI does the AI system follow?
+<details><summary>Show the answer</summary><p>
+
+- **Reliability and safety**
+> To build trust, it's critical that AI systems operate reliably, safely, and consistently under normal circumstances and in unexpected conditions. These systems should be able to operate as they were originally designed, respond safely to unanticipated conditions, and resist harmful manipulation. [Source](https://docs.microsoft.com/en-us/learn/modules/responsible-ai-principles/4-guiding-principles)
+</details>
+
+----
+Q: A company is building an AI solution within the framework of governance and organization requires that reflect defined legal and ethical standards.
+What responsible AI principle is followed?
+<details><summary>Show the answer</summary><p>
+
+- **Accountability**
+> The people who design and deploy AI systems must be accountable for how their systems operate. Organizations should draw upon industry standards to develop accountability norms. [Source](https://docs.microsoft.com/en-us/learn/modules/responsible-ai-principles/4-guiding-principles)
+</details>
+
+----
+Q: Which facial recognition task is best fits the question "Who is this person in this group of people?"
+<details><summary>Show the answer</summary><p>
+
+- **Identification**
+> Face detection: Detect one or more human faces along with attributes such as age, emotion, pose, smile, and facial hair, including 27 landmarks for each face in the image. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/face/overview#:%7E:text=The%20Azure%20Face%20service%20provides,%2C%20mobile%20apps%2C%20and%20robotics.)
+</details>
+
+----
+Q: What AI service can you use to interpret the meaning of user input, such as "Please contact me again later"?
+<details><summary>Show the answer</summary><p>
+
+- **Language Understanding (LUIS)**
+> This service is specifically designed to understand human language within the context of a conversation. It allows developers to build applications that can identify the intention behind a user's message and extract relevant details from it. For instance, when a user says, "Please contact me again later," LUIS can help determine that the user is asking for a follow-up contact. It's not just about processing the language; it's about understanding the intent and context, which is crucial in scenarios where you need to interpret and respond to user requests. This is why LUIS is ideal for interpreting the meaning behind user inputs in a conversational context. [Source](https://docs.microsoft.com/en-ca/azure/cognitive-services/luis/what-is-luis)
+</details>
+
+----
+Q: What does tokenization achieve in the training of transformer models?
+<details><summary>Show the answer</summary><p>
+
+- **It decomposes the training text into tokens**
+> Tokenization is the process of breaking down the training text into tokens, which are unique text values used to train the model.
+</details>
+
+----
+Q: Returning a bounding box that identifies the location of a truck is an image is an example of?
+<details><summary>Show the answer</summary><p>
+
+- **Object detection**
+> Object detection machine learning models are trained to classify individual objects within an image and identify their location with a bounding box. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/4-understand-computer-vision)
+</details>
+
+----
+Q: A company chooses to separate customers into different groups to assist the marking department. What type of machine learning technique is applied?
+<details><summary>Show the answer</summary><p>
+
+- **Clustering**
+> Clustering is a form of machine learning that is used to group similar items into clusters based on their features. [Source](https://docs.microsoft.com/en-us/learn/modules/create-clustering-model-azure-machine-learning-designer/introduction)
+</details>
+
+----
+Q: What kind of models does Azure OpenAI support?
+<details><summary>Show the answer</summary><p>
+
+- **GPT 3.5**
+- **Embeddings**
+- **DALL-E**
+- **GPT-4**
+> Azure OpenAI supports many models such as GPT-4, GPT 3.5, Embeddings models, and DALL-E, which serve different needs. [Source](https://learn.microsoft.com/en-us/training/modules/fundamentals-generative-ai/4-azure-openai)
+</details>
+
+----
+Q: A company plans to apply Text Analytics API features to a technical support ticket system.
+What Text Analytics API feature is best suited for extracting key dates and times from the support ticket?
+<details><summary>Show the answer</summary><p>
+
+- **Named Entity Recognition (NER)**
+> Named Entity Recognition (NER) has the ability to identify and categorize entities in your text such as people, places, organizations, date/time, quantities, percentages, currencies, and more. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/text-analytics/how-tos/text-analytics-how-to-entity-linking?tabs=version-3-preview)
+</details>
+
+----
+Q: The process of automating the time-consuming, iterative activities of machine learning model generation is known as automated machine learning.
+<details><summary>Show the answer</summary><p>
+
+- **True**
+> Automated machine learning (AutoML) is all about automating the repetitive and time-consuming tasks involved in developing machine learning models. This includes processes like selecting the right model, tuning parameters, and validating model performance, which traditionally require a lot of manual effort and expertise. AutoML aims to make these steps faster and more accessible, especially for those who may not be experts in machine learning.
+</details>
+
+----
+Q: What steps are involved in identifying and managing potential harms in a generative AI process?
+<details><summary>Show the answer</summary><p>
+
+- **Testing and verifying the prioritized harms**
+- **Identifying potential harms**
+- **Prioritizing identified harms**
+> The process involves identifying potential harms, prioritizing them based on impact and likelihood, and then testing and verifying these harms.
+</details>
+
+----
+Q: Which computer vision workload should be used to identify celebrities in images?
+<details><summary>Show the answer</summary><p>
+
+- **Facial recognition**
+> Face detection that perceives faces and attributes in an image; person identification that matches an individual in your private repository of up to 1 million people; perceived emotion recognition that detects a range of facial expressions like happiness, contempt, neutrality, and fear; and recognition and grouping of similar faces in images. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/4-understand-computer-vision)
+</details>
+
+----
+Q: A company needs to develop a mobile app that allows employees to scan and store their expenses while traveling. What type of computer vision is best suited for this task?
+<details><summary>Show the answer</summary><p>
+
+- **Optical character recognition (OCR)**
+> Optical character recognition (OCR) allows you to extract printed or handwritten text from images, such as photos of street signs and products, as well as from documents—invoices, bills, financial reports, articles, and more. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/computer-vision/overview-ocr)
+</details>
+
+----
+Q: Which of the following are features of common AI workloads?
+<details><summary>Show the answer</summary><p>
+
+- **High computational requirements**
+> AI workloads typically require significant computational power due to complex algorithms and data processing.
+- **Large datasets**
+> AI workloads often involve handling and analyzing large datasets.
+</details>
+
+----
+Q: A company is developing a chatbot solution in Azure. What service should they use to determine a user's intent?
+<details><summary>Show the answer</summary><p>
+
+- **Language Understanding (LUIS)**
+> Language Understanding (LUIS) is a cloud-based conversational AI service that applies custom machine-learning intelligence to a user's conversational, natural language text to predict overall meaning and pull out relevant, detailed information. Design your LUIS model with categories of user intentions called intents. Each intent needs examples of user utterances. Each utterance can provide data that needs to be extracted with machine learning entities. [Source](https://docs.microsoft.com/en-ca/azure/cognitive-services/luis/what-is-luis)
+</details>
+
+----
+Q: In the machine learning progress, what is the method for splitting data for training and evaluation?
+<details><summary>Show the answer</summary><p>
+
+- **Randomly split the data into rows for training and rows for evaluation**
+> In Azure Machine Learning, the percentage split is the available technique to split the data. In this technique, random data of a given percentage will be split to train and test data. [Source](https://docs.microsoft.com/en-us/azure/machine-learning/studio-module-reference/split-data#how-to-configure-split-data)
+</details>
+
+----
+Q: Which of the following statements about Azure Machine Learning designer is true?
+<details><summary>Show the answer</summary><p>
+
+- **Allows you to build, test, and deploy machine learning models using a drag-and-drop visual canvas**
+> Azure Machine Learning designer lets you visually connect datasets and modules on an interactive canvas to create machine learning models. [Source](https://docs.microsoft.com/en-ca/azure/machine-learning/concept-designer)
+- **Allows you to save your work in the form of a pipeline draft**
+> As you edit a pipeline in the designer, your progress is saved as a pipeline draft. You can edit a pipeline draft at any point by adding or removing modules, configuring compute targets, creating parameters, and so on. [Source](https://docs.microsoft.com/en-ca/azure/machine-learning/concept-designer#pipeline-draft)
+</details>
+
+----
+Q: What Machine Learning feature helps non-experts to create Azure machine learning models from data?
+<details><summary>Show the answer</summary><p>
+
+- **Automated machine learning**
+> This feature enables non-experts to quickly create an effective machine learning model from data. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/2-understand-machine-learn)
+</details>
+
+----
+Q: What type of workload is a natural language processing workload?
+<details><summary>Show the answer</summary><p>
+
+- **Text translation**
+> A natural language processing (NLP) workload involves processing and understanding human language. Text translation specifically falls under the domain of NLP workloads as it involves the translation of text from one language to another.
+</details>
+
+----
+Q: What is a primary function of copilots in software applications?
+<details><summary>Show the answer</summary><p>
+
+- **To assist users with common tasks using generative AI**
+> Copilots in software applications utilize generative AI models to assist users with common tasks, as described in the text.
+</details>
+
+----
+Q: In Azure Machine Learning designer, which two components can you drag onto a canvas?
+<details><summary>Show the answer</summary><p>
+
+- **Dataset**
+- **Module**
+> Azure Machine Learning designer lets you visually connect datasets and modules on an interactive canvas to create machine learning models. [Source](https://docs.microsoft.com/en-us/azure/machine-learning/concept-designer)
+</details>
+
+----
+Q: Which of the following scenarios should the Form Recognizer service be used?
+<details><summary>Show the answer</summary><p>
+
+- **Extracting the ID number from an invoice**
+- **Identifying the manufacturer from a receipt**
+> Form Recognizer applies advanced machine learning to accurately extract text, key/value pairs, tables, and structures from documents. With just a few samples, you can tailor Form Recognizer to understand your documents, both on-premises and in the cloud. [Source](https://azure.microsoft.com/en-ca/services/form-recognizer/)
+</details>
+
+----
+Q: What service should be used to train an object detection model using your own images?
+<details><summary>Show the answer</summary><p>
+
+- **Custom Vision**
+> Azure Custom Vision is a cognitive service that lets you build, deploy, and improve your own image classifiers. An image classifier is an AI service that applies labels (which represent classes) to images, according to their visual characteristics. Unlike the Computer Vision service, Custom Vision allows you to specify the labels to apply. [Source](https://azure.microsoft.com/en-us/services/cognitive-services/custom-vision-service/)
+</details>
+
+----
+Q: A company plans to use Azure Machine Learning designer to publish an inference pipeline for real-time inferencing. Which two parameters should be used to consume the pipeline?
+<details><summary>Show the answer</summary><p>
+
+- **The Primary Key for your service**
+- **The REST endpoint for your service**
+> You can consume a published pipeline in the Published pipelines page. Select a published pipeline and find the REST endpoint of it. To consume the pipeline, you need: The REST endpoint for your service and the Primary Key for your service. [Source](https://docs.microsoft.com/en-in/learn/modules/create-regression-model-azure-machine-learning-designer/deploy-service)
+</details>
+
+----
+Q: What is the name of the Computer Vision task described as "an advanced machine learning technique in which individual pixels in an image are classified according to the object to which they belong"?
+<details><summary>Show the answer</summary><p>
+
+- **Semantic Segmentation**
+> Semantic segmentation is an advanced machine learning technique in which individual pixels in the image are classified according to the object to which they belong. [Source](https://docs.microsoft.com/en-us/learn/modules/get-started-ai-fundamentals/4-understand-computer-vision)
+</details>
+
+----
+Q: Which machine learning type best fits the process of splitting a date into the month, day, and year fields?
+<details><summary>Show the answer</summary><p>
+
+- **Feature engineering**
+> Feature engineering is the process of using domain knowledge of the data to create features that help ML algorithms learn better. In Azure Machine Learning, scaling and normalization techniques are applied to facilitate feature engineering. Collectively, these techniques and feature engineering are referred to as featurization.
+Often, features are created from raw data through a process of feature engineering. For example, a timestamp in itself might not be useful for modeling until the information is transformed into units of days, months, or categories that are relevant to the problem, such as holiday versus working day. [Source](https://docs.microsoft.com/en-us/azure/machine-learning/concept-automated-ml#feature-engineering)
+</details>
+
+----
+Q: Which of the following is a popular example of a generative AI application?
+<details><summary>Show the answer</summary><p>
+
+- **ChatGPT**
+> ChatGPT is a popular example of a generative AI chatbot application created by OpenAI
+</details>
+
+----
+Q: Which of the following is a use case for clustering?
+- Analyze the contents of images and grouping images that have similar colors
+- Predicting whether a patient is diagnosed with diabetes or not based on features such as blood pressure, age, etc
+- Predicting the number of sales based on historical data
+- Predicting how many minutes it will take to complete a race based on previous data
+<details><summary>Show the answer</summary><p>
+
+- **Analyze the contents of images and grouping images that have similar colors**
+</details>
+
+----
+Q: A company is developing a natural language processing solution in Azure to analyze customer reviews and determine how positive or negative each review is.
+What type of natural language processing workload is this an example of?
+<details><summary>Show the answer</summary><p>
+
+- **Sentiment Analysis**
+> The Text Analytics API's Sentiment Analysis feature provides two ways for detecting positive and negative sentiment. If you send a Sentiment Analysis request, the API will return sentiment labels (such as "negative", "neutral" and "positive") and confidence scores at the sentence and document level. [Source](https://docs.microsoft.com/en-us/azure/cognitive-services/text-analytics/how-tos/text-analytics-how-to-sentiment-analysis?tabs=version-3-1)
+</details>
+
+----
